--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,372 @@
-/*All your page styles and formatting goes here*/
+/* Body */
+a {
+	color: #FF9500;
+}
+
+a:hover {
+	color: #E66000;
+}
+
+
+/* Button */
+.btn {
+	border: 1px solid #ddd;
+	border-radius: 0;
+	background: transparent;
+}
+
+.btn:hover {
+	opacity: 1;
+}
+
+.btn-lg {
+	font-size: 28px;
+}
+
+.btn-3d {
+	background: #FF9500;
+	font-size: 22px;
+	color: #fff;
+	border:1px solid transparent;
+	border-bottom: 5px solid #1d37a7;
+	border-radius: 4px;
+	padding: 9px 30px 9px 15px;
+}
+
+.btn-3d .fa {
+	opacity: .4;
+	color: #333;
+	margin-right: 10px;
+}
+
+.btn-3d span {
+	position: relative;
+	top:-8px;
+}
+
+.btn-3d:hover {
+	border: 1px solid #ddd;
+	background: #fff;
+	color: #FF9500 !important;
+	border-bottom: 5px solid #ddd;
+}
+
+.btn-3d:hover .fa {
+	opacity: 1;
+	color: #FF9500;
+}
+
+.color .btn-3d {
+	color: #FF9500 !important;
+	background: #fff;
+	border-color: #ddd;
+}
+
+.color .btn-3d .fa {
+	color: #FF9500 !important;
+}
+
+.btn-lg {
+	font-size: 35px;
+	padding:21px 55px;
+}
+
+.btn-sm {
+	font-size: 20px;
+	padding:17px 43px;
+}
+
+.btn-xs {
+	font-size: 18px;
+	padding:13px 35px;
+}
+
+/* Overlay */
+.overlay {
+	background: #25201f;
+	opacity: 0.50;
+	position: absolute;
+	z-index: 0;
+	top:0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+}
+
+.overlay .color {
+	background: rgba(19, 69, 254, 0.73);
+	opacity: .95;
+}
+
+/* Background & Cover Text*/
+#cover {
+	background: url(../bg.jpg) bottom center no-repeat;
+	width: 100%;
+	height: 640px;
+	min-height: 640px;
+	background-attachment: fixed;
+	position: relative;
+	display: table;
+
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+}
+
+#cover .container {
+	position: static;
+}
+
+#cover .cover-content {
+	font-family: 'Open Sans';
+	color: #FFFFFF;
+	font-weight: 200;
+
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	margin-top: -100px;
+
+	z-index: 1;
+}
+
+#cover .cover-big  {
+	font-weight: 700;
+	font-size: 3em;
+	text-transform: uppercase;
+}
+
+#cover .cover-normal {
+	font-size: 2.5em;
+	font-weight: 300;
+}
+
+#cover .cover-small {
+	font-size: 1.5em;
+	font-weight: 300;
+}
+
+#cover .cover-small a {
+	color: #048c4c !important;
+	text-shadow: 1px 1px #CCCCCC;
+}
+
+#cover .cover-small a:hover {
+	color: #E66000;
+}
+
+#cover .btn-3d {
+	padding: 10px 20px;
+	font-size: 1em;
+}
+
+#cover .reg-btn {
+	margin-top: 7.5% !important;	
+}
+
+.down {
+  background: url('../arrow-new.gif') no-repeat 0 0;
+  display: block;
+  width: 30px;
+  height: 35px;
+  position: absolute;
+  z-index: 1;
+  bottom: 20px;
+  left: 50%;
+  margin-left: -10px;
+
+  transition: none;
+  -o-transition: none;
+  -ms-transition: none;
+  -moz-transition: none;
+  -webkit-transition: none;
+
+  animation-name: bounce;
+  -o-animation-name: bounce;
+  -ms-animation-name: bounce;
+  -moz-animation-name: bounce;
+  -webkit-animation-name: bounce;
+  
+  animation-direction: normal;
+  -o-animation-direction: normal;
+  -ms-animation-direction: normal;
+  -moz-animation-direction: normal;
+  -webkit-animation-direction: normal;
+  
+  animation-duration: 2s;
+  -o-animation-duration: 2s;
+  -ms-animation-duration: 2s;
+  -moz-animation-duration: 2s;
+  -webkit-animation-duration: 2s;
+  
+  animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+
+@-moz-keyframes bounce {
+  0% {
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  20% {
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  40% {
+    -moz-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+
+  50% {
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  60% {
+    -moz-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+
+  80% {
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  100% {
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  20% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  40% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+
+  50% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  60% {
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+
+  80% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@-o-keyframes bounce {
+  0% {
+    -o-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  20% {
+    -o-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  40% {
+    -o-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+
+  50% {
+    -o-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  60% {
+    -o-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+
+  80% {
+    -o-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  100% {
+    -o-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@-ms-keyframes bounce {
+  0% {
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  20% {
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  40% {
+    -ms-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+
+  50% {
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  60% {
+    -ms-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+
+  80% {
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  100% {
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes bounce {
+  0% { transform: translateY(0); }
+
+  20% { transform: translateY(0); }
+
+  40% { transform: translateY(-30px); }
+
+  50% { transform: translateY(0); }
+
+  60% { transform: translateY(-15px); }
+
+  80% { transform: translateY(0); }
+
+  100% { transform: translateY(0); }
+}
