--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 /* Body */
+
 body {
 	color:#2E2E2E;
+	text-align: center;
 }
 
 a {
@@ -13,6 +15,7 @@ a:hover {
 
 
 /* Button */
+
 .btn {
 	border: 1px solid #ddd;
 	border-radius: 0;
@@ -86,6 +89,7 @@ a:hover {
 }
 
 /* Overlay */
+
 .overlay {
 	background: #25201f;
 	opacity: 0.50;
@@ -103,6 +107,7 @@ a:hover {
 }
 
 /* Background & Cover Text*/
+
 #cover {
 	background: url(../bg.jpg) bottom center no-repeat;
 	width: 100%;
@@ -387,5 +392,49 @@ a:hover {
 
 #overview .btn {
 	color: #FFFFFF !important;
-	border: non
+	border: none;
+}
+
+/* People */
+
+#people {
+	background-color: #EAEFF2;
+}
+
+#people h4 {
+	font-weight: bold;
+}
+
+#people a:hover {
+	text-decoration: none;
+}
+
+#people .person {
+	margin: 5% 0%;
+}
+
+#people .pic {
+	padding-right: 0%;
+}
+
+#people .pic img {
+	border: 3px solid #FF9500;
+	border-radius: 50%;
+	-o-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+}
+
+#people .info {
+	padding-left: 0%;
+	margin-top: 10px;
+}
+
+#people .glyphicon-envelope {
+	color: #E66000;
+}
+
+#people .modal-content {
+	background-color: transparent;
 }
