--- a/css/styles.css
+++ b/css/styles.css
@@ -470,3 +470,57 @@ a:hover {
 #faq #accordion .panel-heading {
 	background-color: #EAEFF2;
 }
+
+/* Footer */
+
+footer {
+	border-radius: 10px;
+	box-shadow: 0px -2.5px 5px rgb(0, 0, 0);
+}
+
+footer .contact span {
+	/*font-size: 175%;*/
+	/*margin: 0% 2%;*/
+}
+
+/*footer .contact a {
+	color: #484848;
+	background-color: #484848;
+	border: 1px solid #FF9500;
+	border-radius: 50%;
+}*/
+
+footer .contact a:hover {
+	text-decoration: none;
+}
+
+footer .contact .facebook:hover {
+	color: #326496 !important;
+}
+
+footer .contact .twitter:hover {
+	color: #484848 !important;
+}
+
+footer .contact .twitter:hover .fa-twitter {
+	color: #00ACED;
+}
+
+footer .contact .gplus:hover {
+	color: #c83232 !important;
+}
+
+footer .contact .github:hover {
+	color: #484848 !important;
+}
+
+/* Video Modal */
+
+#video .modal-dialog {
+    width: 450px;
+    margin: 7.5% auto;
+}
+
+#video .modal-content {
+	background-color: transparent;
+}
