--- a/css/styles.css
+++ b/css/styles.css
@@ -355,6 +355,103 @@ a:hover {
 	margin: 2.5% 0%;
 }
 
+/* Navigation */
+
+.navigation {
+	margin-left: -15px;
+	margin-right: -15px;
+}
+
+.navigation-bar {
+	margin: 0 auto;
+	padding: 0;
+	list-style: none;
+	text-align: left;
+	display: table;
+}
+.navigation-bar-header {
+	background: rgba(0, 0, 0, 0.75);
+	position: relative;
+	display: none;
+}
+
+.navigation-bar-header.sticky {
+	top:0;
+	width: 100%;
+	position: fixed;
+	z-index: 1;
+	display: block;
+}
+
+.navigation-bar-right {
+	float: right;
+}
+
+.navigation-bar:after {
+	content: '';
+	clear: both;
+}
+
+.navigation-bar > li {
+	display: inline-block;
+}
+
+.navigation-bar > li a {
+	color: #fff;
+	font-size: 18px;
+	padding: 10px 15px;
+	display: inline-block;
+}
+
+.navigation-bar > li a:hover, .navigation-bar > li a.active {
+	color: #FFFFFF !important;
+	text-decoration: none;
+	border: none;
+}
+
+.navigation-bar > li.active a {
+	color: #fff;
+}
+
+/*.navigation-bar > li.featured {
+	opacity:0;
+	-webkit-transition: all .5s linear;
+	-moz-transition: all .5s linear;
+	transition: all .5s linear;
+}
+
+.sticky .navigation-bar > li.featured {
+	opacity:1;
+}
+
+.navigation-bar > li.featured {
+	padding-bottom: 22px;
+	padding-top: 22px;
+	margin-right: 25px;
+	float: right;
+}
+
+.navigation-bar > li.featured i {
+	padding-right: 10px;
+}*/
+
+.navigation-bar > li.featured a {
+	color: #FFFFFF !important;
+	font-size: 14px;
+	font-weight: bold;
+	text-decoration: none;
+	background-color:#FF9500;
+	border-radius: 5px;
+	margin-left: 15px;
+}
+
+.navigation-bar > li.featured a:hover {
+	color: #FF9500 !important;
+	font-size: 16px;
+	background-color: #FFFFFF;
+	border-bottom: 5px solid #FF9500 !important;
+}
+
 /* People */
 
 #people {
