Update Dates FAQ and inserted date for Kochi meetup

--- a/css/styles.css
+++ b/css/styles.css
@@ -528,6 +528,12 @@ a:hover {
 	margin: 0% 2.5%;
 }
 
+#faq #accordion .panel-body .date {
+	display: inline-block;
+	text-align: center;
+	float: left;
+}
+
 /* Footer */
 
 footer {
